--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <dt>エピソード かいし しゅうりょう</dt>
             <dd>クリック</dd>
             <dt>ストーリー</dt>
-            <dd>クリック（早おくり）・ダブルクリック（スキップ）</dd>
+            <dd>クリック（早おくり）</dd>
         </dl>
         <p>
             <strong>＊</strong>スマートフォン の ばあい： がめん の 両サイド を タップ すると 左右 に いどう 同時 タップ で ジャンプ
