--- a/index.html
+++ b/index.html
@@ -260,6 +260,10 @@
             <dd>
                 <a href="https://supalogo.com/" target="_blank">Supalogo</a>
             </dd>
+            <dt>CSS</dt>
+            <dd>
+                <a href="https://nostalgic-css.github.io/NES.css/" target="_blank">NES.css</a>
+            </dd>
             <dt>フォント</dt>
             <dd>
                 <a href="https://booth.pm/ja/items/1761323" target="_blank">Nu もち</a>
