--- a/index.html
+++ b/index.html
@@ -194,10 +194,11 @@
             <dt>ストーリー</dt>
             <dd>クリック（早おくり）</dd>
         </dl>
-        <p>
-            <strong>＊</strong>スマートフォン の ばあい： がめん の 両サイド を タップ すると 左右 に いどう 同時 タップ で ジャンプ
-        </p>
-
+        <dl>
+            <dt><strong>＊</strong>スマートフォン での そうさ</dt>
+            <dd>がめん 両サイド を タップ（左右いどう）</dd>
+            <dd>同時 に タップ（ジャンプ）</dd>
+        </dl>
     </div>
     <div class="play-button">
         <a href="pwa.html" class="nes-btn is-primary goto-game">
