--- a/index.html
+++ b/index.html
@@ -194,45 +194,15 @@
             <dt>ストーリー</dt>
             <dd>クリック（早おくり）</dd>
         </dl>
-        <dl>
-            <dt><strong>＊</strong>スマートフォン での そうさ</dt>
-            <dd>がめん 両サイド を タップ（左右いどう）</dd>
-            <dd>同時 に タップ（ジャンプ）</dd>
-        </dl>
+        <p>
+            <strong>＊</strong>スマートフォン の ばあい : がめん 両サイド を タップ（左右いどう） 同時 タップ（ジャンプ）
+        </p>
     </div>
     <div class="play-button">
         <a href="pwa.html" class="nes-btn is-primary goto-game">
             <span>今すぐプレイ</span>
         </a>
     </div>
-
-    <!-- <div id="story" class="container">
-        <h2 class="section-title">ストーリー</h2>
-        <div class="nes-container is-rounded is-dark">
-            <p>
-                ヨシュナ の しんえいたいちょう ばってき と 時を 同じくして
-                王国 に やくさい が はびこり はじめた。
-            </p>
-        </div>
-        <div class="nes-container is-rounded is-dark">
-            <p>
-                ひとびと は
-                光の めがみ ライラ の かげり
-                と
-                ヤミの 女王 アリル の ふっかつ
-                を
-                よかん した。
-            </p>
-        </div>
-        <div class="nes-container is-rounded is-dark">
-            <p>
-                ヨシュナ よ。<br/>
-                そなた も かんじて おる じゃろう。
-                この まがまがしく も きょうだい な ヤミを。
-            </p>
-        </div>
-    </div> -->
-
 
     <div id="development" class="container">
         <h2 class="section-title">
