--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@
             <dt>ストーリー</dt>
             <dd>クリック（早おくり）</dd>
         </dl>
-        <p>
-            <strong>＊</strong>スマートフォン の ばあい : がめん 両サイド を タップ（左右いどう） 同時 タップ（ジャンプ）
-        </p>
+        <dl>
+            <dt><strong>＊</strong>スマートフォン の ばあい</dt>
+            <dd>がめん 両サイド を タップ（左右いどう） 同時 タップ（ジャンプ）</dd>
+        </dl>
     </div>
     <div class="play-button">
         <a href="pwa.html" class="nes-btn is-primary goto-game">
