--- a/story.html
+++ b/story.html
@@ -653,16 +653,17 @@
       <p>
         へいか も しって いたのだ。
         光と ヤミの ことわり を。
-      </p>
-      <p>
         国の とうち と じんしん の しょうあく それぞれ ことなる しくみ が ひつよう な ことを。
         そう しくみ なのだ。
-        そして じぶん は それを しって しまった。
       </p>
       <p>
         へいか の ことば に うそ は ない だろう。
-        しかし これから の じぶん を おもう と どこか そらおそろしい きもち を おぼえた。
+        しくみ を しった いじょう は 国に つくす ぎむ が ある。
         たしかに いそがしく なりそうだ。
+      </p>
+      <p>
+        れいびょう の 上に ひろがる ぬける ような 青空。
+        ヨシュナ は ためいき を かくす ように 天を あおいだ。
       </p>
     </section>
     <section id="next" class="next bitfont">
