--- a/story.html
+++ b/story.html
@@ -662,7 +662,7 @@
         たしかに いそがしく なりそうだ。
       </p>
       <p>
-        れいびょう の 上に ひろがる ぬける ような 青空。
+        せいどう の 上に ひろがる ぬける ような 青空。
         ヨシュナ は ためいき を かくす ように 天を あおいだ。
       </p>
     </section>
